--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "echo \"there are no tests\""
   },
   "devDependencies": {
+    "code-surfer": "2.0.0-alpha.4",
     "mdx-deck": "2.3.2",
-    "code-surfer": "2.0.0-alpha.4"
+    "mermaid": "^8.0.0"
   },
   "name": "my-deck"
 }
